# exception_handler

./: .gitignore  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
api/: serializers.py
exception_handler/: asgi.py  settings.py  urls.py  wsgi.py
handler/: mixins.py  views.py
handler/templates/handler/: list.html
